population health v1 and cohort analytics

--- a/cohortAnalysis/medWeb1.0/views/partials/navbar.html
+++ b/cohortAnalysis/medWeb1.0/views/partials/navbar.html
@@ -3,7 +3,7 @@
         <!-- Navbar Barnd -->
         <div class="navbar-header pull-left">
             <a ui-sref="app.similarPatientsMed" class="navbar-brand">
-                <p style="position:relative;left:20px;top: 10px">患者群体分析</p>
+                <p style="position:relative;left:20px;top: 10px">分析</p>
                 <!--<small>-->
                     <!--&lt;!&ndash;<img src="assets/img/logo.png" ng-if="!settings.rtl" alt="" />&ndash;&gt;-->
                     <!--&lt;!&ndash;<img src="assets/img/logo-rtl.png" ng-if="settings.rtl" alt="" />&ndash;&gt;-->
