--- a/cohortAnalysis/medWeb1.0/views/tpl/populationHealth.html
+++ b/cohortAnalysis/medWeb1.0/views/tpl/populationHealth.html
@@ -1,4 +1,11 @@
 <!--html for population health-->
+<style>
+.brush .extent {
+  stroke: #fff;
+  fill-opacity: .125;
+  shape-rendering: crispEdges;
+}
+</style>
 <div ng-controller="populationHealthController">
      <div class="row col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <div class = "col-xs-12 col-sm-12 col-md-6 col-lg-6">
@@ -9,8 +16,17 @@
 	            <div class="widget-body">
 	                <div>
 	                    <select ng-model = "item" ng-options="item.name for item in vm.items" ng-click = "changeMap(item.name)">
-                        
 	                    </select>
+                        <span class="pull-right">地图总体区域：
+                        <b>
+                            <a ng-click = "changeMap()">陕西省
+                            </a>
+                        </b>
+                        </br>
+                        当前区域:<b>{{vm.nowCityName}}</b>
+                        </br>
+                        悬浮区域:<b>{{vm.hoverCityName}}</b>
+                        </span>
 	                </div>
 	                <div id ="map">
 					</div>
