--- a/cohortAnalysis/medWeb1.0/views/tpl/populationHealth.html
+++ b/cohortAnalysis/medWeb1.0/views/tpl/populationHealth.html
@@ -70,7 +70,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr ng-repeat = "item in vm.cityNodes">
+                            <tr ng-repeat = "item in vm.tableNodes">
                                 <td ng-bind = "item.id">
                                    
                                 </td>
