--- a/cohortAnalysis/medWeb1.0/views/tpl/populationHealth.html
+++ b/cohortAnalysis/medWeb1.0/views/tpl/populationHealth.html
@@ -49,9 +49,21 @@
 		                    </div>
 	                    </div>
 	                    <div class = "col-xs-12 col-sm-12 col-md-6 col-lg-6">
-	                        <div id ="ageDist">
+	                        <div id ="bloodDist">
 	                        </div>
 	                    </div>
+                        <div class = "col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <div id ="jobDist">
+                            </div>
+                        </div>
+                        <div class = "col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <div id ="deptDist">
+                            </div>
+                        </div>
+                        <div class = "col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <div id ="ageDist">
+                            </div>
+                        </div>
 	               </div>
 	               <hr class = "wide">
 	               <div>
@@ -70,7 +82,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr ng-repeat = "item in vm.tableNodes">
+                            <tr ng-repeat = "item in vm.cityNodes">
                                 <td ng-bind = "item.id">
                                    
                                 </td>
