--- a/cohortAnalysis/medWeb1.0/views/partials/sidebar.html
+++ b/cohortAnalysis/medWeb1.0/views/partials/sidebar.html
@@ -28,5 +28,19 @@
             </li>
         </ul>
     </li>
+    <li>
+        <a ui-sref="app.heatmap" class="menu-dropdown">
+                <i class="menu-icon glyphicon glyphicon-map-marker"></i>
+                <span class="menu-text"> 地理位置热力图分析 </span>
+            <i class="menu-expand"></i>
+        </a>
+        <ul class="submenu">
+            <li ui-sref-active="active">
+                <a ui-sref="app.heatmap">
+                    <span class="menu-text">热力图分析</span>
+                </a>
+            </li>
+        </ul>
+    </li>
 </ul>
 <!-- /Sidebar Menu -->
