--- a/cohortAnalysis/medWeb1.0/views/tpl/heatmap.html
+++ b/cohortAnalysis/medWeb1.0/views/tpl/heatmap.html
@@ -6,9 +6,9 @@
   shape-rendering: crispEdges;
 }
 </style>
-<div ng-controller="populationHealthController">
+<div ng-controller="heatmapController">
      <div class="row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <div class = "col-xs-12 col-sm-12 col-md-6 col-lg-6">
+        <div class = "col-xs-12 col-sm-12 col-md-12 col-lg-12">
 	        <div class="widget">
 	            <div class="widget-header bordered-bottom bordered-sky">
 	                <span class="widget-caption">地理位置分布</span>
@@ -29,11 +29,12 @@
                         </span>
 	                </div>
 	                <div id ="map">
+                        <img src="../assets/img/chinaMap.png">
 					</div>
 	            </div><!--Widget Body-->
 	        </div><!--Widget-->
         </div>
-        <div class = "col-xs-12 col-sm-12 col-md-6 col-lg-6">
+        <div class = "col-xs-12 col-sm-12 col-md-12 col-lg-12">
          	<div class="widget">
 	            <div class="widget-header bordered-bottom bordered-sky">
 	                <span class="widget-caption">分析结果</span>
