--- a/cohortAnalysis/medWeb1.0/views/tpl/heatmap.html
+++ b/cohortAnalysis/medWeb1.0/views/tpl/heatmap.html
@@ -6,6 +6,7 @@
   shape-rendering: crispEdges;
 }
 </style>
+
 <div ng-controller="heatmapController">
      <div class="row col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <div class = "col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -29,7 +30,7 @@
                         </span>
 	                </div>
 	                <div id ="map">
-                        <img src="../assets/img/chinaMap.png">
+                        <!-- <img src="../assets/img/chinaMap.png"> -->
 					</div>
 	            </div><!--Widget Body-->
 	        </div><!--Widget-->
